# legion-of-bom

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  DOLT_REMOTE.md  LIBRARIES.md  LICENSE  MCP.md  README.md  TEST_CIRCUITS.md  manifest  rc-drc.rpt  rc_lowpass-drc.rpt  rc_lowpass.erc  rc_lowpass_sklib.py  requirements.txt
.agents/skills/lob-cli/: SKILL.md
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.github/workflows/: release.yml
crates/cli/: Cargo.toml
crates/cli/src/: doctor.rs  main.rs
crates/core/: Cargo.toml
crates/core/examples/: resistor_swatches.rs  visual_bom.rs
crates/core/footprints/: README.md
crates/core/src/: board.rs  bom.rs  drc.rs  easyeda.rs  fab.rs  fetch.rs  guide.rs  images.rs  jlcpcb.rs  layout.rs  lib.rs  logo.rs  manifest.rs  model.rs  mouser.rs  netlist.rs  panel.rs  parts.rs  pdf.rs  resistor.rs  route.rs  sexpr.rs  skidl.rs  source.rs  spice.rs  stage.rs  subboard.rs  symbols.rs  theme.rs  tools.rs  units.rs  validate.rs  verify.rs
crates/core/src/spice/: lob_builtin.lib
docs/: MCP_GUIDE.md  STAGE_DEV.md  TOOLING.md
examples/: double_sided.py  eurorack_8hp.toml  opamp_noninv.py  rc_ladder.py  rc_lowpass.py  rectifier.py
scripts/: pull_part_image.py
