[workspace]
resolver = "2"
members = ["crates/core", "crates/cli"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/FuturePresentLabs/legion-of-bom"
authors = ["Future Present Labs"]

[workspace.dependencies]
legion-of-bom-core = { path = "crates/core" }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
