[package]
name = "legion-of-bom-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core pipeline library for legion-of-bom: circuit model, stage traits, BOM."

[dependencies]
thiserror.workspace = true
serde_json.workspace = true
ureq.workspace = true
hmac.workspace = true
sha2.workspace = true
base64.workspace = true
